# multi-agent-deepagents

./: .gitignore  README.md  models.py  pyproject.toml  readme.txt  readme.txtx  requirements.txt  skill_tools_subagents.py
examples/: hello_world.py
react_agent/: __init__.py  backend_agent.py  devops_agent.py  doc_agent.py  frontend_agent.py  pm_agent.py  review_agent.py  test_agent.py
src/multi_agent/: __init__.py
src/multi_agent/agents/: __init__.py  base.py
src/multi_agent/tools/: __init__.py  base.py
