[project]
name = "multi-agent"
version = "0.1.0"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
description = "A flexible multi-agent framework for collaborative AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["ai", "multi-agent", "llm", "agent"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/${github_username}/multi-agent"
"Bug Tracker" = "https://github.com/${github_username}/multi-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
